--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --font-family: "Montserrat",
-        sans-serif;
 
     --header-height: 3.5rem;
     --white-color: hsl(0, 0%, 100%);
-    --black-color: hasl(0, 0%, 0%)
+    --black-color: hasl(0, 0%, 0%);
+
+    --font-family: "Montserrat", sans-serif;
+    --body-font-size: 1.5rem;
+    --biggest-font-size: 2rem;
+    --big-font-size: 1.5rem;
+    --h3-font-size: 1rem;
+    --normal-font-size: .938rem;
+
+    --font-regular: 400;
+    --font-semi-bold: 600;
+    --font-bold: 700;
+
+    --z-tooltip: 10;
+    --z-fixed: 100;
+
+    @media screen and (min-width: 1150px) {
+        :root {
+            --biggest-font-size: 4rem;
+            --big-font-size: 3rem;
+        }
+    }
 }
