--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,3 +218,144 @@ img {
     color: var(--white-color);
     font-size: 1.5rem;
 }
+
+.swiper {
+    height: 100vh;
+}
+
+.swiper-pagination {
+    width: initial;
+    height: max-content;
+    top: 6rem;
+    left: initial;
+    right: 4rem;
+    font-size: var(--big-font-size);
+    font-weight: var(--font-semi-bold);
+    display: flex;
+    column-gap: .25rem;
+    align-items: center;
+}
+
+.swiper-pagination-total {
+    font-size: var(--normal-font-size);
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+    content: '';
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+    font-size: 2rem;
+    color: var(--white-color);
+    width: initial;
+    height: initial;
+    position: initial;
+    outline: none;
+}
+
+.swiper-navigation {
+    position: absolute;
+    z-index: var(--z-tooltip);
+    height: max-content;
+    bottom: 4rem;
+    right: 1.5rem;
+    display: flex;
+    column-gap: 2.5rem;
+}
+
+@media screen and (min-width: 768px) {
+    .nav__menu {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 1150px) {
+    .container {
+        margin-inline: auto;
+    }
+
+    .nav {
+        height: calc(var(--header-height) + 2rem);
+    }
+
+    .nav__toggle,
+    .nav__close {
+        display: none;
+    }
+
+    .nav__menu {
+        width: initial;
+    }
+
+    .nav__list {
+        flex-direction: row;
+        column-gap: 4rem;
+    }
+
+    .home__data {
+        text-align: initial;
+    }
+
+    .home__subtitle {
+        margin-bottom: 1rem;
+    }
+
+    .home__title {
+        margin-bottom: 4.5rem;
+    }
+
+    .home__content {
+        max-width: 1120px;
+        margin-inline: auto;
+        left: 0;
+        right: 0;
+    }
+
+    .home__social {
+        left: 0;
+    }
+
+    .swiper-pagination {
+        top: 10rem;
+    }
+
+    .swiper-pagination-total {
+        font-size: 1.5rem;
+    }
+
+    .swiper-navigation {
+        right: 0;
+        column-gap: 3.5rem;
+    }
+
+    .swiper-button-prev,
+    .swiper-button-next {
+        font-size: 3rem;
+    }
+}
+
+@media screen and (min-width: 800px) and (min-height: 800px) {
+    .home__article {
+        padding-top: 17rem;
+    }
+
+    .swiper-pagination {
+        top: 13rem;
+    }
+}
+
+@media screen and (min-width: 2048px) {
+    .container,
+    .home__content {
+        max-width: 1550px;
+    }
+
+    .home__swiper,
+    .home__content,
+    .home__img,
+    .home__shadow {
+        max-height: 1000px;
+    }
+}
