--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;600;700&display=swap");
 
+/*=============== VARIABLES CSS ===============*/
 :root {
     --header-height: 3.5rem;
+
+    /*========== Colors ==========*/
+    /*Color mode HSL(hue, saturation, lightness)*/
     --white-color: hsl(0, 0%, 100%);
     --black-color: hsl(0, 0%, 0%);
 
@@ -13,14 +17,17 @@
     --h3-font-size: 1rem;
     --normal-font-size: .938rem;
 
+    /*========== Font weight ==========*/
     --font-regular: 400;
     --font-semi-bold: 600;
     --font-bold: 700;
 
+    /*========== z index ==========*/
     --z-tooltip: 10;
     --z-fixed: 100;
 }
 
+/*========== Responsive typography ==========*/
 @media screen and (min-width: 1150px) {
     :root {
         --biggest-font-size: 4rem;
@@ -30,7 +37,7 @@
     }
 }
 
-
+/*=============== BASE ===============*/
 * {
     box-sizing: border-box;
     padding: 0;
@@ -58,6 +65,7 @@ img {
     height: auto;
 }
 
+/*=============== REUSABLE CSS CLASSES ===============*/
 .container {
     max-width: 1120px;
     margin-inline: 1.5rem;
@@ -214,55 +222,13 @@ img {
     row-gap: 1.5rem;
 }
 
+.home__social-link:hover {
+    transform: scale(1.3);
+}
+
 .home__social-link {
     color: var(--white-color);
     font-size: 1.5rem;
-}
-
-.swiper {
-    height: 100vh;
-}
-
-.swiper-pagination {
-    width: initial;
-    height: max-content;
-    top: 6rem;
-    left: initial;
-    right: 4rem;
-    font-size: var(--big-font-size);
-    font-weight: var(--font-semi-bold);
-    display: flex;
-    column-gap: .25rem;
-    align-items: center;
-}
-
-.swiper-pagination-total {
-    font-size: var(--normal-font-size);
-}
-
-.swiper-button-prev::after,
-.swiper-button-next::after {
-    content: '';
-}
-
-.swiper-button-prev,
-.swiper-button-next {
-    font-size: 2rem;
-    color: var(--white-color);
-    width: initial;
-    height: initial;
-    position: initial;
-    outline: none;
-}
-
-.swiper-navigation {
-    position: absolute;
-    z-index: var(--z-tooltip);
-    height: max-content;
-    bottom: 4rem;
-    right: 1.5rem;
-    display: flex;
-    column-gap: 2.5rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -347,6 +313,7 @@ img {
 }
 
 @media screen and (min-width: 2048px) {
+
     .container,
     .home__content {
         max-width: 1550px;
